Add es6-promise dependency

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
       "ios": "2.3.0"
     }
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "es6-promise": "^4.1.1",
+  }
 }
